[UPDATE] fixing; add new feature
