# src/docs/swagger.json
@@ -14,7 +14,7 @@
     },
     "host": "localhost:1111",
     "paths": {
-        "/game/v1/dare": {
+        "/game/dare": {
             "get": {
                 "description": "This is API to get random activity",
                 "produces": [
@@ -40,7 +40,7 @@
                 }
             }
         },
-        "/game/v1/fact": {
+        "/game/fact": {
             "get": {
                 "description": "This is API to get random fact",
                 "produces": [
@@ -66,7 +66,7 @@
                 }
             }
         },
-        "/game/v1/img": {
+        "/game/img": {
             "get": {
                 "description": "This is API to get random image",
                 "produces": [
@@ -92,7 +92,7 @@
                 }
             }
         },
-        "/game/v1/joke": {
+        "/game/joke": {
             "post": {
                 "description": "This is API to get random joke",
                 "consumes": [
@@ -132,7 +132,7 @@
                 }
             }
         },
-        "/game/v1/predict": {
+        "/game/predict": {
             "post": {
                 "description": "This is API to get prediction from name input by user",
                 "consumes": [
@@ -257,6 +257,72 @@
                     }
                 }
             }
+        },
+        "/twitter/timeline": {
+            "post": {
+                "description": "This is API to see tweets in timeline",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Twitter"
+                ],
+                "summary": "Get Tweets in Timeline",
+                "parameters": [
+                    {
+                        "description": "Body",
+                        "name": "domain.ExamplePredictName",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.InputTimeline"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.BadRequestResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/twitter/tweet/fact": {
+            "get": {
+                "description": "This is API to tweet random fact",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Twitter"
+                ],
+                "summary": "Random Fact",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.BadRequestResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -292,6 +358,14 @@
                 "is_safe": {
                     "type": "boolean",
                     "example": false
+                }
+            }
+        },
+        "domain.InputTimeline": {
+            "type": "object",
+            "properties": {
+                "total_data_show": {
+                    "type": "integer"
                 }
             }
         },
